syntax = "proto3";

package paladin.domain;
option go_package = "protos/domain";

// The greeting service definition.
service PaladinService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
